--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 <body>
     <header>
         <div class="container">
-            <img src="images/logo-2 (1).svg" alt="logo">
+            <div class="header_logo">
+                <img src="images/logo-2 (1).svg" alt="logo">
+            </div>
+            <div class="header_burger">
+                <span></span>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#">Home </a></li>
@@ -324,6 +329,11 @@
             </div>
         </div>
     </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+
+
 </body>
 
 </html>
